<resources>
	<string name="app_name">aMPdroid</string>
	<string name="app_desc">Control MP from your Android phone</string>
	<string name="actionbar_activity_not_found">Failed to open intent...</string>
	<string name="welcome_choose_client">Choose client:</string>
	<string name="welcome_auto_connect">Connect on startup</string>
	<string name="welcome_no_client">Please select client...</string>
	<string name="welcome_connect">Select</string>
	<string name="welcome_no_clients">No clients defined yet, use the settings screen to
		add clients</string>
	<string name="home_wol_confirmation_title">No Connection</string>
	<string name="home_wol_confirmation_text">No connection to service, wake pc using WOL?
	</string>
	<string name="home_wol_running">Sending WOL packets to pc</string>
	<string name="home_wol_nomac">No connection and cannot send WOL packets unless a
		MAC address is defined in setting...</string>
	<string name="downloads_title">aMPdroid Downloads</string>
	<string name="downloads_delete_file_success">Successfully deleted file</string>
	<string name="downloads_delete_file_failed">Couldn\'t deleted file</string>
	<string name="downloads_also_remove_queued_title">Remove Queued</string>
	<string name="downloads_also_remove_queued_text">Remove items that are currently waiting to be
		downloaded?</string>
	<string name="downloads_state_queued">Queued</string>
	<string name="downloads_state_running">Running</string>
	<string name="downloads_state_paused">Paused</string>
	<string name="downloads_state_stopped">Stopped</string>
	<string name="downloads_state_finished">Finished</string>
	<string name="downloads_state_failed">Failed</string>
	<string name="series_actors">Actors</string>
	<string name="series_seasons">Seasons</string>
	<string name="series_release">Release Date</string>
	<string name="series_runtime">Runtime</string>
	<string name="series_certification">Certification</string>
	<string name="movie_actors">Actors</string>
	<string name="movie_release">Release Date</string>
	<string name="movie_runtime">Runtime</string>
	<string name="movie_certification">Certification</string>
	<string name="episode_gueststars">Guest Stars</string>
	<string name="episode_firstaired">First Aired</string>
	<string name="episode_rating">Rating</string>
	<string name="button_prev">Prev</string>
	<string name="button_next">Next</string>
	<string name="button_earlier">Earlier</string>
	<string name="button_later">Later</string>
	<string name="title_home">MediaPortal for Android</string>
	<string name="title_tvserver">TvServer</string>
	<string name="title_tvserver_state">Manual Control</string>
	<string name="title_tvserver_channels">Channels</string>
	<string name="title_tvserver_recordings">Recordings</string>
	<string name="title_tvserver_schedules">Schedules</string>
	<string name="title_tvserver_epg">Program Guide</string>
	<string name="title_media">Media Browsing</string>
	<string name="media_views">Views</string>
	<string name="media_views_text">Text</string>
	<string name="media_views_poster">Poster</string>
	<string name="media_views_thumbs">Thumbs</string>
	<string name="media_views_banner">Banner</string>
	<string name="media_tabs_shares">Shares</string>
	<string name="media_tabs_videos">Videos</string>
	<string name="media_tabs_movies">Movies</string>
	<string name="media_tabs_series">Series</string>
	<string name="media_nofile">No local file available for this item</string>
	<string name="media_series_loadingerror">Couldn\'t load series</string>
	<string name="media_series_loadmultiplewarning_title">Downloading multiple episodes!</string>
	<string name="media_series_loadmultiplewarning_text_begin">Do you really want to download\u0020</string>
	<string name="media_series_loadmultiplewarning_text_end">\u0020episodes?</string>
	<string name="media_series_season">Season</string>
	<string name="media_series_loadseries">Loading Series ...</string>
	<string name="media_series_loadseriesdetails">Loading Series Details ...</string>
	<string name="media_series_loadepisodedetails">Loading Episode Details ...</string>
	<string name="media_episode">Episode</string>
	<string name="media_episodes">Episodes</string>
	<string name="media_episodes_loading">Loading Episodes ...</string>
	<string name="media_episodes_minutes"> minutes</string>
	<string name="media_shares_loadshares">Loading Video Shares ...</string>
	<string name="media_shares_loadfiles">Loading Files ...</string>
	<string name="media_movie_loadingerror">Couldn\'t load movie</string>
	<string name="media_movie_loadmoviedetails">Loading movie details</string>
	<string name="media_movies_loading">Loading Movies ...</string>
	<string name="media_videos_loadingerror">Couldn\'t load video</string>
	<string name="media_videos_loadvideodetails">Loading Video Details</string>
	<string name="media_videos_loadvideos">Loading Videos ...</string>
	<string name="music_tabs_shares">Folders</string>
	<string name="music_tabs_albums">Albums</string>
	<string name="music_tabs_artists">Artists</string>
	<string name="music_tabs_songs">Songs</string>
	<string name="music_album_details_tracks">Tracks</string>
	<string name="music_album_details_year">Year</string>
	<string name="music_album_details_num_track">Tracks</string>
	<string name="music_album_details_length">Length</string>
	<string name="music_album_details_year_seperator">\u0020-\u0020</string>
	<string name="music_share_loadshares">Loading Shares ...</string>
	<string name="music_share_loaddirectory">Loading Directory ...</string>
	<string name="music_albums_loadalbums">Loading Albums ...</string>
	<string name="music_artists_loadartists">Loading Artists ...</string>
	<string name="music_tracks_loadtracks">Loading Tracks ...</string>
	<string name="days_yesterday">Yesterday</string>
	<string name="days_today">Today</string>
	<string name="days_tomorrow">Tomorrow</string>
	<string name="state_recording">Recording</string>
	<string name="state_timeshifting">Timeshifting</string>
	<string name="tvserver_starttimeshift">Start timeshift</string>
	<string name="tvserver_startrecording">Start recording</string>
	<string name="tvserver_activecards">Active Cards</string>
	<string name="tvserver_title_starttimeshiftrecording">Start Timeshift/Recording</string>
	<string name="settings_categories_clients">Clients</string>
	<string name="settings_category_general">General</string>
	<string name="settings_category_tvserver">Tv Server</string>
	<string name="settings_category_media">Media Browsing</string>
	<string name="settings_general_fullscreen">Fullscreen</string>
	<string name="settings_general_fullscreen_desc">Hide titlebar. Restart app for changes to take
		affect)</string>
	<string name="settings_preference_vibrate_title">Vibrate on Touch</string>
	<string name="settings_preference_vibrate_desc">Screen vibrates on user interaction</string>
	<string name="settings_tvserver_showall_title">Show \"All Channel\" Group</string>
	<string name="settings_tvserver_showall_desc">Show the \"All Channel\" Group which contains all
		channels of the tv server</string>
	<string name="settings_general_clientname_title">Client Name</string>
	<string name="settings_general_clientname_desc">The Name of this client when interacting with the
		MediaPortal</string>
	<string name="settings_media_loaddetails_title">Load details automatically</string>
	<string name="settings_media_loaddetails_desc">Load details for media items automatically or only
		when item is selected</string>
	<string name="settings_media_cachevalid_title">Cache valid</string>
	<string name="settings_media_cachevalid_desc">Cached items should be refreshed if older then
	</string>
	<string name="settings_categories_clients_desc">Edit Clients</string>
	<string name="settings_clients_newclient_title">Clients</string>
	<string name="settings_clients_switchadvanced">Switch to Advanced Mode</string>
	<string name="settings_clients_newclient_desc">Add, edit, remove clients</string>
	<string name="settings_general_autoconnect_title">Auto-Connect</string>
	<string name="settings_general_autoconnect_desc">Automatically connect to MediaPortal client on
		startup</string>
	<string name="settings_general_autoreconnect_title">Reconnect</string>
	<string name="settings_general_autoreconnect_desc">Automatically reconnect to MediaPortal client on
		connection loss</string>
	<string name="settings_general_autowol_title">WOL on connect</string>
	<string name="settings_general_autowol_desc">Automatically wake pc on connect</string>
	<string name="settings_general_statusbar_hide_title">Hide Statusbar</string>
	<string name="settings_general_statusbar_hide_desc">Auto-hide the statusbar</string>
	<string name="settings_general_statusbar_hide_dialog_title">Hide Statusbar Mode</string>
	<string name="settings_clients_clientname">Name of this Instance:</string>
	<string name="settings_clients_clienthost">Host or IP Address:</string>
	<string name="settings_clients_clientmac">Mac Address:</string>
	<string name="settings_clients_clientmac_hint">Use : or - as seperators</string>
	<string name="settings_clients_clientport">Port:</string>
	<string name="settings_clients_clientusername">Username:</string>
	<string name="settings_clients_clientpassword">Password:</string>
	<string name="settings_clients_clientuseauth">Use Authentication:</string>
	<string name="settings_clients_enableservice">Enable Service</string>
	<string name="settings_clients_gma">GmaWebservice</string>
	<string name="settings_clients_tv4home">Tv4Home</string>
	<string name="settings_clients_wifiremote">WifiRemote</string>
	<string name="settings_media_preload_items_title">Preload Items</string>
	<string name="settings_media_preload_items_desc">How many items should be loaded when the end of a
		list is reached.</string>
	<string name="settings_media_defaultview_series_title">Default View Series</string>
	<string name="settings_media_defaultview_series_desc">Default View for browsing your tv shows</string>
	<string name="settings_media_defaultview_movies_title">Default View Movies</string>
	<string name="settings_media_defaultview_movies_desc">Default View for browsing your movies</string>
	<string name="settings_media_defaultview_videos_title">Default View Videos</string>
	<string name="settings_media_defaultview_videos_desc">Default View for browsing your videos</string>
	<string name="settings_media_defaultview_videoshares_title">Default View Video Shares</string>
	<string name="settings_media_defaultview_videoshares_desc">Default View browsing your video shares</string>
	<string name="settings_media_defaultview_musicshares_title">Default View Music Shares</string>
	<string name="settings_media_defaultview_musicshares_desc">Default View browsing your music shares</string>
	<string name="settings_media_defaultview_musicalbums_title">Default View Music Albums</string>
	<string name="settings_media_defaultview_musicalbums_desc">Default View browsing your music albums</string>
	<string name="settings_media_defaultview_musicartists_title">Default View Music Artists</string>
	<string name="settings_media_defaultview_musicartists_desc">Default View browsing your music artists</string>
	<string name="settings_media_defaultview_musictracks_title">Default View Music Tracks</string>
	<string name="settings_media_defaultview_musictracks_desc">Default View browsing your music tracks</string>
	<string name="settings_streaming_buffering_title">Buffering Mode</string>
	<string name="settings_streaming_buffering_desc">Select the buffering mode for video playback
	</string>
	<string name="settings_streaming_useexternal_title">Use external Player</string>
	<string name="settings_streaming_useexternal_desc">If checked, instead of using the internal
		MediaPlayer (only available for > 2.3) the stream is started with an
		installed external player. Only use this if you have problems with the
		inbuild video player.</string>
	<string name="settings_category_streaming">Streaming</string>
</resources>